--- a/src/quiz.css
+++ b/src/quiz.css
@@ -1,24 +1,90 @@
 body {
-    background-color: #a2a2a2 !important;
+    background-color: #FFF !important;
   }
-
+ul li {
+  list-style: none !important;
+}
 .containerMain{
     display: flex;
     justify-content: center;
-    align-items: center;
+    overflow: hidden;
     min-height: 70vh;
 }
 
 .main{
-    background-color: #FFF;
+    
     min-height: 200px;
     height: min-content;
     border-radius: 15px;
     padding: 20px;
-    box-shadow: 10px 10px 42px 0px rgba(0, 0, 0, 0.75);
+    
     flex-direction: column;
 }
 
 .dropdown-menu{
     right: 0 !important;
   }
+
+.watchwintext{
+  font-size: 26px;
+  color: #fff;
+  font-weight: bold;
+}
+.oi-dw-logo{
+  float: left;
+    width: 260px;
+    padding-top: 5px;
+    padding-left: 50px;
+}
+
+.oi-dw-banner{
+  background-image: url("/oidw-header-bg.jpg");
+    border: 1px solid #767793;
+    border-radius: 2px;
+    height: 100px;
+}
+
+.oidw-quiz-block{
+  background: rgba(0,0,0,0.2);
+    border: thin solid #525179;
+    position: relative;
+    padding: 20px 0 80px 0;
+    border-radius: 2px;
+}
+.oidw-quiz-no {
+  padding-bottom: 50px;
+}
+.oidw-quiz-no i{
+  width: 45px;
+    font-size: 25px;
+    background: #fdb913;
+    color: #fff;
+    border-radius: 50%;
+    text-align: center;
+    border: 3px solid #fff;
+    margin: 0 auto;
+    padding: 6px 15px;
+    height: 45px;
+    
+}
+
+.oidw-quiz-no .question{
+    color: #fff;
+    font-size: 24px;
+    font-weight: bold;
+    margin-left: 5px;
+}
+
+.option1 .left-option {float: left;position: absolute;font-size: 34px;padding: 0 15px;background: #0161f6;outline: none;display: block;border-radius: 5px 0 0 5px;line-height: 65px;height: 65px;color: #FFF;}
+.option1 .right-option {float: left;margin-left: 65px;margin-top: 8px;font-size: 20px;color: #000;font-weight: 600;background-color: transparent;border: 1px solid transparent;}
+.option1 .right-option:hover{color: #333;background-color: transparent;border: 1px solid transparent;}
+.option1 .right-option:disabled{color: #333;opacity: 1;background-color: transparent;border: 1px solid transparent;}
+.options ul li .option1 {background: rgba(255,255,255,0.7);border-radius: 5px;color: #000000;position: relative;height: 65px;}
+.options ul li.correct .option1 {border: 1px solid #13b70b;}
+.options ul li.wrong .option1 {border: 1px solid #cd2b22;}
+.correct .option1 .left-option {background: #13b70b;}
+.wrong .option1 .left-option {background: #cd2b22;}
+.option-bottom {position: absolute;left: 0;right: 0;bottom: -30px;margin: auto;text-align: center;width: 250px;}
+.next-question button {padding: 15px 0px;border: 1px solid #ffffff;border-radius: 5px;background: #3366cc;font-size: 20px;font-weight: bold;cursor: pointer;display: block;color: #fff;width: 100%;text-align: center;position: relative;}
+.oidw-arrow-right {border: solid #fff;border-width: 0 3px 3px 0;display: inline-block;padding: 5px;transform: rotate(-45deg);-webkit-transform: rotate(-45deg);position: absolute;right: 15px;top: 22px;}
+.next-question button i {vertical-align: middle;font-size: 30px;}
