new changes added

--- a/src/quiz.css
+++ b/src/quiz.css
@@ -77,7 +77,7 @@ ul li {
 .vid-title{font-size: 24px;}
 
 .option1 .left-option {float: left;position: absolute;font-size: 34px;padding: 0 15px;background: #0161f6;outline: none;display: block;border-radius: 5px 0 0 5px;line-height: 65px;height: 65px;color: #FFF;}
-.option1 .right-option {float: left;margin-left: 65px;margin-top: 8px;font-size: 20px;color: #000;font-weight: 600;background-color: transparent;border: 1px solid transparent;text-indent: 24px;}
+.option1 .right-option {float: left;margin-left: 65px;margin-top: 8px;font-size: 20px;color: #000;font-weight: 600;background-color: transparent;border: 1px solid transparent;text-indent: 40px;}
 .option1 .right-option:hover{color: #333;background-color: transparent;border: 1px solid transparent;}
 .option1 .right-option:disabled{color: #333;opacity: 1;background-color: transparent;border: 1px solid transparent;}
 .options ul li .option1 {background: rgba(255,255,255,0.7);border-radius: 5px;color: #000000;position: relative;height: 65px;}
@@ -126,7 +126,7 @@ ul li {
   .card-link {text-decoration: none;}
 
   .oidw-quiz-no .question{font-size: 20px;  }
-  .option1 .right-option{font-size: 18px;}
+  .option1 .right-option{font-size: 16px;line-height: 20px;}
   .watchwintext{font-size: 20px;}
   .vid-title{font-size: 20px;}
   .oi-dw-logom{width: 35%;}
