--- a/src/quiz.css
+++ b/src/quiz.css
@@ -186,6 +186,10 @@ ul li {
     line-height: 23px !important;
 }
 #dwlogo{height: 50px;}
+.winner-photo{margin: 0 auto;width: 50px;height: 50px;border-radius: 50%;overflow: hidden;}
+.winner-photo img, .winner-thumb img {max-width: 100%;border: 0 none;display: block;}
+.winner-thumb {float: left;margin: 0 auto;width: 40px;height: 40px;border-radius: 50%;overflow: hidden;}
+.winner-details {margin-left: 45px;}
 @media only screen and (max-width: 768px) {
   body {
     background-color: #d4e3f5 !important;
